--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="nav-list">
         <li>
           <a href="catalog.html"> Каталог</a>
-          <ul class="nav-inner-list sub-menu">
+          <ul class="nav-inner-list">
             <li>
               <a href="#">Новинки</a>
             </li>
@@ -98,12 +98,12 @@
   </header>
 
   <main>
-    <section class="schedule">
+    <section class="schedule container">
       <h2 class="visually-hidden">Режим работы</h2>
       <p>С 10 до 20, ежедневно</p>
       <a href="tel:88124502525">8 812 450-25-25</a>
     </section>
-    <section>
+    <section class="container">
       <h2 class="visually-hidden">Самое популярное мороженое</h2>
       <div class="main-slide">
         <div class="main-slide-item">
@@ -131,11 +131,11 @@
         </ul>
       </div>
     </section>
-
+  <div class="container special-ice">
     <section class="special special-rasp">
       <h2 class="visually-hidden">Акционное предложение</h2>
-      <h3>Малинка даром!</h3>
-      <p>
+      <h3 class="special-rasp-title">Малинка даром!</h3>
+      <p class="special-rasp-desc">
         При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ
         банку маринового варенья бесплатно.
       </p>
@@ -143,15 +143,16 @@
     </section>
     <section class="special special-chocolate">
       <h2 class="visually-hidden">Акционное предложение</h2>
-      <h3>Шоколадки даром!</h3>
-      <p>
+      <h3 class="special-chocolate-title">Шоколадки даром!</h3>
+      <p class="special-chocolate-desc">
         При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей
         шоколадной присыпки совершенно бесплатно.
       </p>
       <a class="button btn-special" href="#">Хочу шоколадки!</a>
     </section>
+  </div>
 
-    <section class="catalog-hits">
+    <section class="catalog-hits container">
       <h2 class="visually-hidden">Хиты продаж мороженого</h2>
       <ul class="catalog-list">
         <li class="catalog-item">
@@ -242,7 +243,7 @@
 
     <section class="contact">
       <h2 class="visually-hidden">Где мы находимся?</h2>
-      <img src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
+      <img class="contact-img" src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
       <div  class="contact-info">
         <h2 class="visually-hidden">Наш адрес</h2>
         <p>Адрес главного офиса и офлайн-магазина:</p>
