Fix by comments

--- a/catalog.html
+++ b/catalog.html
@@ -138,7 +138,7 @@
       <h2 class="visually-hidden">Форма дополнительных параметров</h2>
       <form class="filters" action="https://echo.htmlacademy.ru/courses" method="post">
         <fieldset>
-          <legend class="filters-sort">Сортировка</legend>
+          <legend class="filters-name">Сортировка</legend>
           <section class="filters-parameters">
             <option class="filters-parameter">по популярности</option>
             <option class="filters-parameter">сначала недорогие</option>
@@ -147,12 +147,12 @@
           </section>
         </fieldset>
         <fieldset class="filters-price">
-          <legend>
+          <legend class="filters-name">
             <span>Цена: 100 &#8381; - 500 &#8381;</span>
           </legend>
         </fieldset>
         <fieldset>
-          <legend class="filters-fat">Жирность</legend>
+          <legend class="filters-name">Жирность</legend>
           <ul class="filters-fat-list">
             <li>
               <input type="radio" name="fat" id="nofat" />
@@ -173,7 +173,7 @@
           </ul>
         </fieldset>
         <fieldset>
-          <legend class="filters-type">Наполнители:</legend>
+          <legend class="filters-name">Наполнители:</legend>
           <ul class="filters-type-list">
             <li>
               <input type="checkbox" name="name" id="chocolate" />
