--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section class="container">
       <h2 class="visually-hidden">Самое популярное мороженое</h2>
       <div class="main-slide">
-        <div class="main-slide-item">
+        <div class="main-slide-item active">
           <h3>Крем-брюле и пломбир с малиновым джемом</h3>
           <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
@@ -134,8 +134,8 @@
   <div class="container special-ice">
     <section class="special special-rasp">
       <h2 class="visually-hidden">Акционное предложение</h2>
-      <h3 class="special-rasp-title">Малинка даром!</h3>
-      <p class="special-rasp-desc">
+      <h3 class="special-title">Малинка даром!</h3>
+      <p class="special-desc">
         При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ
         банку маринового варенья бесплатно.
       </p>
@@ -143,8 +143,8 @@
     </section>
     <section class="special special-chocolate">
       <h2 class="visually-hidden">Акционное предложение</h2>
-      <h3 class="special-chocolate-title">Шоколадки даром!</h3>
-      <p class="special-chocolate-desc">
+      <h3 class="special-title">Шоколадки даром!</h3>
+      <p class="special-desc">
         При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей
         шоколадной присыпки совершенно бесплатно.
       </p>
@@ -242,17 +242,20 @@
   </div>
 
     <section class="contact">
-      <h2 class="visually-hidden">Где мы находимся?</h2>
-      <img class="contact-img" src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
-      <div  class="contact-info">
-        <h2 class="visually-hidden">Наш адрес</h2>
-        <p>Адрес главного офиса и офлайн-магазина:</p>
-        <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
-        <p>Для заказов по телефону:</p>
-        <a href="tel:88124502525">8 812 450-25-25</a>
-        <p>(с 10 до 20 ежедневно)</p>
-        <button class="button btn-contact">Форма обратной связи</button>
+      <div class="container contact-inner">
+        <h2 class="visually-hidden">Где мы находимся?</h2>
+        <img class="contact-img" src="./img/main/pin.png" alt="Месторасположение магазина мороженого" width="80" height="140">
+        <div  class="contact-info">
+          <h2 class="visually-hidden">Наш адрес</h2>
+          <p>Адрес главного офиса и офлайн-магазина:</p>
+          <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+          <p>Для заказов по телефону:</p>
+          <a href="tel:88124502525">8 812 450-25-25</a>
+          <p>(с 10 до 20 ежедневно)</p>
+          <button class="button btn-contact">Форма обратной связи</button>
+        </div>
       </div>
+
     </section>
   </main>
 
